<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu"
        app:menu="@menu/menu_notification">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_santander_toolbar"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@color/red_Primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>


    <TextView
        android:id="@+id/tv_hello_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_hello_client"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tv_agency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_agency"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_hello_client"
        app:layout_constraintTop_toBottomOf="@id/tv_hello_client" />

    <TextView
        android:id="@+id/tv_account_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_account_currency"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_agency"
        app:layout_constraintTop_toBottomOf="@id/tv_hello_client" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_user"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="28dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agency">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tv_update_balance"
                android:layout_width="26dp"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_dollar_symbol"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_expand"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_expand_less"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/txt_balance_available"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_update_balance"
                app:layout_constraintStart_toEndOf="@+id/tv_update_balance"
                app:layout_constraintTop_toTopOf="@id/tv_update_balance" />

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginStart="18dp"
                android:text="@string/txt_balance"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_saldo" />

            <TextView
                android:id="@+id/tv_balance_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_balance_limit"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tv_balance"
                app:layout_constraintTop_toBottomOf="@id/tv_balance" />

            <TextView
                android:id="@+id/tv_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/txt_limit"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_balance_limit"
                app:layout_constraintTop_toTopOf="@id/tv_balance_limit" />

            <View
                android:id="@+id/v_raw"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_balance_limit" />

            <TextView
                android:id="@+id/txt_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_see_extract"
                android:textColor="@color/red_Quaternary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_raw" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_pay"
        android:layout_width="105dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="@id/mcv_card_user"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_user">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_card_pay"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_credit_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_pay"
                android:textColor="@color/grey_Primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_card_pay" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_tranf"
        android:layout_width="105dp"
        android:layout_height="100dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toStartOf="@id/mcv_card_recharge"
        app:layout_constraintStart_toEndOf="@id/mcv_card_pay"
        app:layout_constraintTop_toTopOf="@id/mcv_card_pay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transfer"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_transfer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_transferir"
                android:textColor="@color/grey_Primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_transfer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_recharge"
        android:layout_width="105dp"
        android:layout_height="100dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="@id/mcv_card_user"
        app:layout_constraintTop_toTopOf="@id/mcv_card_pay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recharge"
                android:layout_width="32dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_recharge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_recharge"
                android:textColor="@color/grey_Primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recharge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="@id/mcv_card_recharge"
        app:layout_constraintStart_toStartOf="@id/mcv_card_pay"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_pay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red_Secundary"
            android:padding="1dp">

            <TextView
                android:id="@+id/tv_card_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_card_final"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/txt_card_final_number"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_card_final"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_down"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_expand_more"
                app:layout_constraintBottom_toBottomOf="@+id/tv_card_final"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_card_final" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>